fixed horizontal scrollbar made simplest component framework ever

--- a/editor/css/layout.css
+++ b/editor/css/layout.css
@@ -1,22 +1,19 @@
 /* layout */
 
 html {
-    font-family: Verdana, sans-serif;
-  }
-  
-  body {
-      margin-top: 0;
-  }
-  
-  .main {
-    line-height: 1.7em;
-  }
-  
-  .leftsidebar { 
-    width: 178px; 
-    min-height: 500px;
-    float:left; 
-  }
-  
-  
-  
+  font-family: Verdana, sans-serif;
+}
+
+body {
+  margin: 0;
+}
+
+.main {
+  line-height: 1.7em;
+}
+
+.leftsidebar {
+  width: 178px;
+  min-height: 500px;
+  float: left;
+}
