--- a/editor/css/tooltips.css
+++ b/editor/css/tooltips.css
@@ -1,49 +1,46 @@
-/* tooltips */
+/* "grammar popup" is the very large hovering panel that shows a sentence diagram.  */
+/* "tooltip" is the more traditional small, single-line, no-HTML hovering panel */
 
 .hasGrammarPopup {
-    position: relative;
-    display: inline-block;
-/*    border-bottom: 1px dotted red; */
+  position: relative;
+  display: inline-block;
 }
 
 .hasGrammarPopup .grammarPopup {
-    display: none;
-    border-style: solid;
-    border-radius: 6px;
-    border-width: 5px;
-    border-color: #E8E5FA;
-    background-color: #E8E5FA;
-    position: absolute;
-    z-index: 1;
-    top: 100%;
-    left: 50%;
+  display: none;
+  border-style: solid;
+  border-radius: 6px;
+  border-width: 5px;
+  border-color: #e8e5fa;
+  background-color: #e8e5fa;
+  position: absolute;
+  z-index: 1;
+  top: 100%;
+  left: 50%;
 }
 
 .hasGrammarPopup:hover .grammarPopup {
-    display: block;
+  display: block;
 }
 
-
 .hasTooltip {
-    position: relative;
-    display: inline-block;
-/*    border-bottom: 1px dotted red; */
+  position: relative;
+  display: inline-block;
 }
 
 .hasTooltip .tooltip {
-    display: none;
-    border-style: solid;
-    border-radius: 6px;
-    border-width: 5px;
-    border-color: darkgray;
-    background-color: darkgray;
-    position: absolute;
-    z-index: 1;
-    top: 100%;
-    left: 50%;
+  display: none;
+  border-style: solid;
+  border-radius: 6px;
+  border-width: 5px;
+  border-color: darkgray;
+  background-color: darkgray;
+  position: absolute;
+  z-index: 1;
+  top: 100%;
+  left: 50%;
 }
 
 .hasTooltip:hover .tooltip {
-    display: block;
+  display: block;
 }
-
